# MATHGAME

./: .clang-tidy  Audio.cpp  Audio.h  CMakeLists.txt  Drawer.cpp  Drawer.h  Game.cpp  Game.h  MathEquation.cpp  MathEquation.h  Music.cpp  Music.h  README.md  Sound.cpp  Sound.h  drawer.cpp  drawer.h  equation.cpp  equation.h  main.cpp
include/: Drawer.h  EvaluateString.h  Game.h  MathEquation.h  Music.h
src/: Drawer.cpp  Game.cpp  MathEquation.cpp  Music.cpp  main.cpp
tests/: CMakeLists.txt  basic.cpp  test.cpp
