cmake_minimum_required(VERSION 3.10.2)
project(GameSDL)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
include_directories(${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
add_executable(GameSDL main.cpp MathEquation.cpp MathEquation.h Drawer.cpp Drawer.h Music.cpp Music.h Music.cpp Music.h)
target_link_libraries(GameSDL ${SDL2_IMAGE_LIBRARIES} ${SDL2_MIXER_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_LIBRARIES})