cmake_minimum_required(VERSION 3.10.2)
project(GameSDL)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
include_directories(${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
add_subdirectory(lib/googletest)
set(CMAKE_CXX_STANDARD 14)
add_executable(GameSDL include/Game.h src/MathEquation.cpp include/MathEquation.h src/Drawer.cpp include/Drawer.h src/Music.cpp include/Music.h src/Game.cpp)
target_link_libraries(GameSDL ${SDL2_IMAGE_LIBRARIES} ${SDL2_MIXER_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_LIBRARIES})
include(CTest)
enable_testing()

if(BUILD_TESTING)
    add_subdirectory (tests)
endif()
